# portal

./: .gitignore  Dockerfile  Makefile  README.md  config.py  data.parquet  docker-compose.yaml  pyproject.toml  wsgi.py
migration/: env.py
migration/versions/: 3d1d51883782_change_columns_name_in_lpus_table.py  3dfe06bf8c02_add_indexes.py  4245ab668168_change_len_of_role_name.py  86561a6dc87d_set_unique_for_login.py  9224a50049d5_init.py  a6965959e724_change_phone_len.py  cea7c3e4547c_add_index.py  d3cc108dce35_init_table.py  fc0b3fce1a83_change_users_to_lpu_table_name.py
portal/: __init__.py
src/: config.py  wsgi.py
src/celdery/: celery.py  tasks.py
src/database/: database.py  models.py
src/duplication/: dataframes.py  dup.py  first_duplic.py  models.py  update_state.py  users.py
src/portal/: __init__.py  celery_routes.py  data_routes.py  routes.py
tests/: test.py  unique_test.py
